Add build script to copy engine and ai directories for Railway deployment

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -3,14 +3,12 @@ nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-  "pip install -r requirements.txt"
+  "chmod +x build.sh",
+  "./build.sh"
 ]
 
 [phases.build]
-cmds = [
-  "cp -r ../engine . || cp -r ../../engine . || true",
-  "cp -r ../ai . || cp -r ../../ai . || true"
-]
+cmds = []
 
 [start]
 cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
